Fixed background for dark mode articles

--- a/assets/css/_scss/_dark.scss
+++ b/assets/css/_scss/_dark.scss
@@ -77,6 +77,10 @@ html.dark {
       color: $orange;
     }
   }
+
+  article {
+    background: $green-dark;
+  }
 }
 
 
